css/style.css
/* ... */
.page-footer__social {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    align-self: center;

    width: 140px;

    justify-content: space-between;
}

.page-footer__social-btn_facebook {
    background: url("../img/fb.svg") no-repeat;
}

.page-footer__social-btn_instagram {
    background: url("../img/instagram.svg") no-repeat;
}

.page-footer__social-btn_twitter {
    background: url("../img/twitter.svg") no-repeat;
}

.page-footer__menu {
    display: flex;
    flex-direction: column;

    width: 440px;
    margin-top: 100px;
    margin-left: 96px;
}

.page-footer__menu-item:not(:first-of-type) {
    margin-left: 34px;
}

.page-footer__actions {
    width: 350px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

.page-footer__actions-item:not(:first-of-type) {
    margin-left: 25px;
}

.page-footer__menu-list,
.page-footer__profile-list,
.page-footer__actions-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;

    margin: 0;
    padding: 0;

    list-style: none;
}

.page-footer__menu-list {
    margin-top: 20px;
    margin-bottom: 60px;
}

.page-footer_catalog .page-footer__menu-list {
    margin-top: 23px;
}

.page-footer__actions-list {
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin-left: 15px;
    margin-bottom: 37px;
}

.page-footer__copyright {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    justify-content: flex-end;
}

.page-footer__actions-contacts {
    -ms-flex-item-align: end;
    align-self: flex-end;

    width: 164px;
    height: 30px;
    margin-bottom: 62px;

    color: #ffffff;
}

.page-footer__info-address,
.page-footer__actions-contacts {
    font-style: normal;
}

.page-footer__copyright-image {
    width: 27px;
    height: 35px;

    opacity: 1;
}

.page-footer__copyright-image:hover {
    opacity: 0.6;
}

.page-footer__copyright-image:active {
    opacity: 0.3;
}

/***

index.html page styles

***/

/* Slider */

.slider-promo {
    position: relative;

    margin-top: -1px;
    padding-top: 45px;
    margin-bottom: 93px;

    background: -webkit-linear-gradient(top, #f7e296 156px, transparent 156px);

    background: -o-linear-gradient(top, #f7e296 156px, transparent 156px);

    background: linear-gradient(to bottom, #f7e296 156px, transparent 156px)
}

.slider-promo::before {
    position: absolute;
    top: 82px;
    right: 460px;

    width: 100px;
    height: 8px;

    content: "";
    background: white;
}

.slider-promo-container {
    min-height: 500px;
}

.slider-promo__controls-control {
    display: none;
}

.slider-promo__item-photo-container {
    width: 522px;
    margin: 0;
    margin-left: 28px;
    padding: 0;
}

.slider-promo__item {
    display: none;
    position: relative;

    width: 1040px;
    margin: 0 auto;
}

.slider-promo__item-container {
    margin: 0;
    margin-left: -22px;;
    padding: 0;
    width: 533px;
}

.slider-promo__item_active {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.slider-promo__item::before {
    position: absolute;
    top: -12px;
    right: 3px;

    width: 168px;
    height: 102px;

    content: "00";
    color: white;
    font-family: "Gilroy ExtraBold", "Arial", sans-serif;
    font-size: 180px;
    line-height: 180px;
    letter-spacing: 4px;
}

.slider-promo__item:nth-of-type(1)::before {
    content: "01";
}

.slider-promo__item:nth-of-type(2)::before {
    content: "02";
}

.slider-promo__item:nth-of-type(3)::before {
    content: "03";
}

.slider-promo__item:nth-of-type(2)::before,
.slider-promo__item:nth-of-type(3)::before {
    right: 34px;
}

.slider-promo__item-main-content {
    position: relative;

    width: 510px;

    margin-top: 45px;
    margin-left: auto;
}

.slider-promo__item-info-title {
    margin: 0;
    margin-top: 35px;
    margin-bottom: 13px;
    max-width: 500px;
    min-height: 118px;
    max-height: 100px;
    overflow: hidden;

    font-size: 47px;
    line-height: 56px;
    letter-spacing: 1px;
    word-spacing: .012em;
}

.slider-promo__item:nth-of-type(3) .slider-promo__item-info-title {
    font-size: 45px;
}

.slider-promo__item-info-description {
    margin: 0;

    width: 485px;
    min-height: 95px;
    line-height: 30px;
    letter-spacing: .012em;
    word-spacing: .01em;

    overflow: hidden;
}

.slider-promo__item-specification {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;

    margin-left: auto;
}

.slider-promo__item-specification-box:not(:last-of-type) {
    width: 100px;
    margin-right: 60px;
}

.slider-promo__item-specification .slider-promo__item-specification-box:nth-of-type(2) {
    margin-right: 38px;
}

.slider-promo__item-specification-value {
    font-size: 36px;
}

.slider-promo__item-specification-value,
.slider-promo__item-specification-name {
    margin: 0;
    padding: 0;
}

.slider-promo__item-specification-value {
    margin-bottom: 16px;
}

.slider-promo__item-specification-name {
    display: block;
    margin-top: 10px;
    font-size: 13px;
    line-height: 20px;
    font-family: "Open Sans Light", "Arial", sans-serif;
    vertical-align: baseline;
    letter-spacing: .012em;
}

.slider-promo__controls {
    position: absolute;
    z-index: 2;
    top: 358px;
    right: 67px;

    width: 110px;
    min-height: 50px;

    text-align: center;
}

.slider-promo__controls-label {
    position: relative;
    font-size: 0;

    border: 2px solid black;
    border-radius: 50%;
    padding: 5px;
    margin-right: 20px;

    opacity: 0.6;

    cursor: pointer;
}

.slider-promo__controls-label:last-of-type {
    margin-right: 0;
}
/* ... */

